[package]
name = "tedge-mqtt-state-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
async-trait = "0.1"
env_logger = "0.10"
log = "0.4"
scanf = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tedge_actors = { git = "https://github.com/didier-wenzek/thin-edge.io", branch = "fix/tedge-script-ext" }
tedge_mqtt_ext = { git = "https://github.com/didier-wenzek/thin-edge.io", branch = "fix/tedge-script-ext" }
tedge_script_ext = { git = "https://github.com/didier-wenzek/thin-edge.io", branch = "fix/tedge-script-ext" }
tedge_signal_ext = { git = "https://github.com/didier-wenzek/thin-edge.io", branch = "fix/tedge-script-ext" }
tokio = { version = "1.23", features = ["rt", "rt-multi-thread", "time"] }
toml = { version = "0.7" }